Merge branch 'trunk' into report-js-build
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/report-js-build@37669 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c